--- a/src/App.css
+++ b/src/App.css
@@ -399,3 +399,87 @@ small {
   width: 100%;
   padding: 10px;
 }
+
+.app-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.start-game-btn {
+  padding: 10px;
+  border: none;
+  width: 250px;
+  margin-top: 40px;
+  color: white;
+  background-color: #0074d9;
+  border-radius: 3px;
+}
+
+.start-game-btn:hover{
+  cursor: pointer;
+}
+
+/* .btn {
+  display: inline-block;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  background-color: transparent;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+} */
+
+.start-game-btn:hover {
+  box-shadow: inset 0 0 0 20rem var(--darken-1);
+}
+
+.start-game-btn:active {
+  box-shadow: inset 0 0 0 20rem var(--darken-2),
+    inset 0 3px 4px 0 var(--darken-3), 0 0 1px var(--darken-2);
+}
+
+.start-game-btn:disabled,
+.start-game-btn.is-disabled {
+  opacity: 0.5;
+}
+
+.loader {
+  margin-top: 40px;
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 20px;
+  height: 20px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
